RESOLVED FIXED40570
CPP bindings missing some APIs
https://bugs.webkit.org/show_bug.cgi?id=40570
Summary CPP bindings missing some APIs
Kartikaya Gupta
Reported 2010-06-14 07:59:06 PDT
The CPP bindings landed in r60784 (see bug 38279) are missing some bindings. Specifically, bindings for the NodeFilter API, some custom methods in HTMLCollection and HTMLOptionsCollection, some EventTarget type-determining methods, and DOMWindow bindings are missing.
Attachments
Patch to hook up NodeFilter API to CPP bindings (7.55 KB, patch)
2010-06-14 08:00 PDT, Kartikaya Gupta
no flags
Add missing custom methods for HTMLCollection and HTMLOptionsCollection (4.35 KB, patch)
2010-06-14 08:01 PDT, Kartikaya Gupta
no flags
Fix CPP bindings for DOMWindow (7.22 KB, patch)
2010-06-14 08:02 PDT, Kartikaya Gupta
no flags
Patch for EventTarget bindings (8.11 KB, patch)
2010-06-14 08:07 PDT, Kartikaya Gupta
no flags
Patch for EventTarget bindings (v2) (8.11 KB, patch)
2010-06-14 10:00 PDT, Kartikaya Gupta
no flags
Fix CPP bindings for DOMWindow (v2) (5.30 KB, patch)
2010-06-14 10:10 PDT, Kartikaya Gupta
no flags
Unified patch with ChangeLog (25.90 KB, patch)
2010-06-15 07:12 PDT, Kartikaya Gupta
zimmermann: review+
zimmermann: commit-queue+
Unified patch (v2) (25.83 KB, patch)
2010-06-17 21:36 PDT, Kartikaya Gupta
no flags
Kartikaya Gupta
Comment 1 2010-06-14 08:00:22 PDT
Created attachment 58647 [details] Patch to hook up NodeFilter API to CPP bindings Patch is lacking ChangeLog modifications; this should be done before landing.
Kartikaya Gupta
Comment 2 2010-06-14 08:01:38 PDT
Created attachment 58648 [details] Add missing custom methods for HTMLCollection and HTMLOptionsCollection Patch is missing ChangeLog modification, this needs to be done before landing.
Kartikaya Gupta
Comment 3 2010-06-14 08:02:32 PDT
Created attachment 58650 [details] Fix CPP bindings for DOMWindow Patch is missing ChangeLog modification, needs to be done before landing.
Kartikaya Gupta
Comment 4 2010-06-14 08:07:25 PDT
Created attachment 58652 [details] Patch for EventTarget bindings This patch has a bug somewhere that I'm currently tracking down, but uploading anyway for pre-review since it's an ugly patch and any suggestions for improvement would be welcome.
Kartikaya Gupta
Comment 5 2010-06-14 10:00:09 PDT
Created attachment 58666 [details] Patch for EventTarget bindings (v2) Updated patch for EventTarget bindings, with the bug fixed. As with previous patches, the ChangeLog will need to be updated prior to landing.
Kartikaya Gupta
Comment 6 2010-06-14 10:10:37 PDT
Created attachment 58668 [details] Fix CPP bindings for DOMWindow (v2) Updated patch that should apply cleanly on upstream webkit (excludes patch to a file that is only in the olympia branch).
Nikolas Zimmermann
Comment 7 2010-06-14 22:32:46 PDT
Hey Kats, can you please upload a single combined patch for the fixes? (Alternative would be to create one bug per patch, but I think a combined one is fine). Also the patch is missing a proper ChangeLog, please create the template using "prepare-ChangeLog --bug=40570" and include it in the patch. I'm happy to r+ them afterwards! Cheers, Niko
Kartikaya Gupta
Comment 8 2010-06-15 07:12:05 PDT
Created attachment 58774 [details] Unified patch with ChangeLog Merge previous four patches into one, and add a proper ChangeLog.
Nikolas Zimmermann
Comment 9 2010-06-16 00:33:14 PDT
Comment on attachment 58774 [details] Unified patch with ChangeLog Looks great, r=me! The ChangeLog shouldn't say No tests (OOPS). But I'll fix that after commitqueeue lands.
Kartikaya Gupta
Comment 10 2010-06-17 21:36:04 PDT
Created attachment 59070 [details] Unified patch (v2) Updated with a few style fixes from Dan Bates as well.
WebKit Commit Bot
Comment 11 2010-06-17 21:36:23 PDT
Comment on attachment 59070 [details] Unified patch (v2) Rejecting patch 59070 from commit-queue. lists.bugzilla@stakface.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in WebKitTools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). Due to bug 30084 the commit-queue will require a restart after your change. Please contact eseidel@chromium.org to request a commit-queue restart. After restart the commit-queue will correctly respect your committer rights.
Daniel Bates
Comment 12 2010-06-17 21:39:34 PDT
Comment on attachment 59070 [details] Unified patch (v2) Forwarding Niko's r+, this patch only fixes some minor style nits and removes the "OOPS" line in the change log.
WebKit Commit Bot
Comment 13 2010-06-19 09:21:13 PDT
Comment on attachment 59070 [details] Unified patch (v2) Clearing flags on attachment: 59070 Committed r61492: <http://trac.webkit.org/changeset/61492>
WebKit Commit Bot
Comment 14 2010-06-19 09:21:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.